# umbrel-to-citadel

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
ui/: twind.config.ts
ui/routes/: index.tsx
