[package]
name = "umbrel-to-citadel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel-apps = { version = "0.4.0", features = ["umbrel"] }
clap = { version = "4.0.23", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
