[package]
name = "umbrel-to-citadel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.13.0"
citadel-apps = { version = "0.4.0", features = ["umbrel"] }
clap = { version = "4.0.23", features = ["derive"] }
fs_extra = "1.2.0"
git2 = "0.15.0"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
slug = "0.1.4"
tempdir = "0.3.7"
tokio = { version = "1.21.2", features = ["full"] }
